# Quanvolutional_Neural_Networks

./: .gitignore  LICENSE  README.md  pyproject.toml  sweep_results.json
config/: config.yaml
experiments/: compare_models.py  run_experiments.py  sweep_experiment.py
src/data/: dataset.py
src/models/: qnn.py
src/quantum/: circuits.py  encodings.py  quanvolution.py
src/training/: trainer.py
src/utils/: helpers.py
src/visualization/: plots.py
